# PocketRAG

./: .gitignore  LICENSE  pyproject.toml
pocketrag/: cli.py
pocketrag/datasets/: __init__.py  loader.py  mini.py
pocketrag/eval/: qa.py  retrieval.py
pocketrag/generators/: base.py  local_hf.py  prompts.py
pocketrag/index/: bm25.py  faiss_index.py
pocketrag/retrievers/: base.py  bm25_retriever.py  faiss_retriever.py  hybrid.py
pocketrag/utils/: config.py  hw.py  text.py
