[project]
name = "pocketrag"
version = "0.1.0"
description = "Lightweight, reproducible RAG benchmarking on consumer hardware"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name="Srija Yadav Vuppula"}, {name="Harshith Kethavath"}]

dependencies = [
  "typer[all]>=0.12",
  "pydantic>=2.6",
  "rich>=13.7",
  "numpy>=1.26",
  "pandas>=2.2",
  "tqdm>=4.66",
  "psutil>=5.9",
  "platformdirs>=4.2",
  "pyyaml>=6.0",
  "datasets>=3.0",
  "transformers>=4.44",
  "sentence-transformers>=3.0",
  "faiss-cpu>=1.8",
  "rank-bm25>=0.2",
  "scikit-learn>=1.4",
]

[project.scripts]
pocketrag = "pocketrag.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pocketrag*"]